joster dev update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Ogre</title>
-  <base href="https://joster422.github.io/ogre/">  <meta
+  <base href="https://joster-dev.github.io/ogre/">
+  <meta
     name="viewport"
     content="width=device-width, initial-scale=1"
   >
@@ -21,11 +22,11 @@
     name="theme-color"
     content="#247"
   >
-<link rel="stylesheet" href="styles.d2d221ef1aa047772d2f.css"></head>
+<link rel="stylesheet" href="styles.59950c7fbf18589c7427.css"></head>
 
 <body>
   <ogre-root></ogre-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.e94ba732172de6683982.js" nomodule defer></script><script src="polyfills-es2015.442fa3cc45520cc0d518.js" type="module"></script><script src="main-es2015.143d54d9d36f606c2cb0.js" type="module"></script><script src="main-es5.143d54d9d36f606c2cb0.js" nomodule defer></script></body>
+<script src="runtime-es2020.41eb3616844b6c96e4f3.js" type="module"></script><script src="runtime-es5.41eb3616844b6c96e4f3.js" nomodule defer></script><script src="polyfills-es5.56c46f33e4c5580b836f.js" nomodule defer></script><script src="polyfills-es2020.3eb4283ca820c86b1337.js" type="module"></script><script src="main-es2020.d070479a6dd508fa8cc5.js" type="module"></script><script src="main-es5.d070479a6dd508fa8cc5.js" nomodule defer></script></body>
 
 </html>
