--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link
     rel="icon"
     type="image/x-icon"
-    href="favicon.ico"
+    href="assets/logo.svg"
   >
   <link
     rel="manifest"
@@ -20,7 +20,43 @@
   >
   <meta
     name="theme-color"
-    content="#247"
+    content="#247000"
+  >
+  <meta
+    property="og:title"
+    content="Ogre"
+  >
+  <meta
+    property="og:type"
+    content="website"
+  >
+  <meta
+    property="og:description"
+    content="Perfect information turn based two player board game"
+  >
+  <meta
+    property="og:url"
+    content="https://joster-dev.github.io/ogre/"
+  >
+  <meta
+    property="og:image"
+    content="https://joster-dev.github.io/ogre/assets/logo.png"
+  >
+  <meta
+    property="og:image:width"
+    content="500"
+  />
+  <meta
+    property="og:image:height"
+    content="500"
+  />
+  <meta
+    property="og:image:alt"
+    content="Ogre icon"
+  />
+  <meta
+    property="og:site_name"
+    content="Jacob Osterhout Projects"
   >
 </head>
 
